' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package film.entity {
  class "type FilmArt = 'ACTION' | 'DRAMA' | 'ROMANCE'" as FilmArt
  hide FilmArt circle


  class Film <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly name: string
    @Column() readonly hauptdarsteller: string
    @Column() readonly sprache: string
    @Column() readonly genre: FilmArt
    @Column() readonly rating: number
    @Column() readonly erscheinungsjahr: Date
    @Column() readonly schlagwoerter: string
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Hauptdarsteller <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly rolle: string
    @Column() readonly vorname: string
    @Column() readonly nachname: string
    @Column() readonly alter: number
    @OneToMany() readonly film: Film
  }

  Film ..> Entity
  Film *--> "*" Hauptdarsteller : @OneToMany() Hauptdarsteller
  Film .up.> FilmArt

}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
